run tomcat-ee via maven
Documentation for tomee-maven-plugin:
http://tomee.apache.org/maven/